# SegmentFlow

./: .env.local  .gitignore  DOCKER_SETUP.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.toml  install_python_environment.sh  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py  schemas.py
backend/app/api/v1/endpoints/: health.py  labels.py  projects.py  sam3.py  settings.py
backend/app/api/v1/endpoints/projects/: __init__.py  cancel_video_upload.py  clear_frame_labels.py  clear_propagated_frames.py  complete_video_upload.py  create_project.py  delete_project.py  export_segmask.py  export_yolo.py  export_yolo_seg.py  get_conversion_progress.py  get_frame_image.py  get_frame_index.py  get_frame_statuses.py  get_labeled_points.py  get_masks.py  get_original_video.py  get_project.py  get_thumbnail.py  get_upload_progress.py  import_brettzone_video.py  init_video_upload.py  label_settings.py  list_project_images.py  list_projects.py  mark_stage_visited.py  preview_frame.py  save_labeled_points.py  save_mask.py  set_trim_range.py  shared_objects.py  update_frame_validation.py  update_project.py  upload_video_chunk.py  video_info.py
backend/app/api/v1/endpoints/propagation/: __init__.py  get_status.py  progress_websocket.py  shared_objects.py  start_propagation.py
backend/app/core/: brettzone.py  config.py  contour_utils.py  database.py  gpu_utils.py  logging.py  sam3_state.py  sam3_tracker.py  schema.py  trim_utils.py  video_frames.py  video_upload.py
backend/app/models/: __init__.py  base.py  image.py  label.py  labeled_point.py  mask.py  project.py  project_label_setting.py  stats.py  user_settings.py
backend/app/scripts/: __init__.py  apply_migrations.py
backend/scripts/: debug_brettzone_fight.py  resize_label_thumbnails.py
backend/tests/: __init__.py  conftest.py  test_brettzone_import.py  test_convert_video_task.py  test_health.py  test_image_endpoints.py  test_labels.py  test_migrations.py  test_projects.py  test_propagation_concurrency.py  test_schema.py  test_video_frames.py  test_video_upload.py
frontend/: .gitignore  Dockerfile  README.md  env.d.ts  index.html  install_frontend_environment.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: ColorPicker.vue  CreateProjectModal.vue  DualRangeSlider.vue  FileUpload.vue  FrameStatusSlider.vue  ImageViewer.vue  NavBar.vue  StageNavigation.vue
frontend/src/lib/: api.ts
frontend/src/pages/: Export.vue  Home.vue  Labels.vue  ManualLabeling.vue  Propagation.vue  Settings.vue  Trim.vue  Upload.vue
frontend/src/router/: index.ts
scripts/: activate_python.sh  create_db_password.sh  download_pip_cache.sh  download_sam3_model.py  launch_dev.sh  launch_prod.sh  reset_dev.sh  rotate_db_password.sh  run_migrations.sh  stop_dev.sh  stop_prod.sh  validate-and-test.sh
(+4 files in other folders)
