[project]
name = "segmentflow"
version = "0.1.0"
description = "AI-assisted video segmentation labeling tool with SAM3"
authors = [
    { name = "SegmentFlow Team" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "sqlalchemy[asyncio]==2.0.45",
    "aiosqlite==0.22.1",
    "asyncpg==0.31.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-multipart==0.0.21",
    "marshmallow==4.2.0",
    "dacite==1.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==5.0.0",
    "httpx==0.28.1",
    "asgi-lifespan==1.0.1",
    "mypy==1.19.1",
    "ruff==0.14.10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".pytest_cache",
    ".mypy_cache",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C",      # flake8-comprehensions
    "A",      # flake8-builtins
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by line-length)
    "N818",   # exception name
    "UP007",  # use | instead of Union (for compatibility)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = [
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "pytest",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["F841"]      # Allow unused variables in tests
"app/api/v1/endpoints/*.py" = ["B008"]  # Allow FastAPI Depends in defaults only here

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true
disallow_incomplete_defs = true
disallow_untyped_defs = false  # Relax slightly to start
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "uvicorn.*",
    "tests.*",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-fail-under=50",
]
markers = [
    "asyncio: marks tests as async",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
